2002-01-11  Bruno Haible  <bruno@clisp.org>

	* configure.in: Change version number to 0.11-pre5.

2002-01-11  Bruno Haible  <bruno@clisp.org>

	* configure.in: Postprocess doc/Makefile a second time.

2002-01-10  Bruno Haible  <bruno@clisp.org>

	* acconfig.h [OS/2]: Include intl/os2compat.h, not os2/os2compat.h.
	* Makefile.am (EXTRA_DIST): Remove os2/os2compat.h.

2002-01-10  Andrew Zabolotny  <zap@cobra.ru>

	* os2/README.OS2: Update.
	* os2/Makefile: Heavily reworked.
	* os2/iconv/iconv.c: Bug fixes.

2002-01-07  Bruno Haible  <bruno@clisp.org>

	* config.rpath [IRIX]: Fix typo.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* configure.in: Postprocess doc/Makefile.

2002-01-04  Bruno Haible  <haible@clisp.cons.org>

	* config.guess, config.sub: Update to GNU version 2002-01-02.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* configure.in: Call gt_FUNC_FNMATCH.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* configure.in: Change version number to 0.11-pre4.

2001-12-15  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* os2/*: New EMX support.
	* Makefile.am (EXTRA_DIST): Remove old os2/ contents, add new os2/
	contents.
	* acconfig.h: Add conditional include of os2/os2compat.h.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* configure.in: Use a variant of AC_PROG_CXX_WORKS that doesn't abort
	upon failure.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* configure.in: Change version number to 0.11-pre3.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* config.rpath: New file.
	* Makefile.am (EXTRA_DIST): Add it.
	(gettextsrc_SCRIPTS): New variable.

2001-11-30  Bruno Haible  <bruno@clisp.org>

	* configure.in: Change version number to 0.11-pre2.

2001-11-25  Bruno Haible  <bruno@clisp.org>

	* configure.in: Check for C++ compiler.

2001-11-18  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Make misc/gettextize executable.

2001-11-10  Bruno Haible  <haible@clisp.cons.org>
